
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int u8 ;
typedef int u16 ;
struct slave {int dev; TYPE_1__* bond; } ;
struct sk_buff {int dev; int priority; int protocol; scalar_t__ mac_header; scalar_t__ network_header; } ;
struct learning_pkt {int type; int mac_src; int mac_dst; } ;
typedef int __be16 ;
struct TYPE_2__ {int dev; } ;


 scalar_t__ ETH_HLEN ;
 int ETH_P_LOOPBACK ;
 int TC_PRIO_CONTROL ;
 int __vlan_hwaccel_put_tag (struct sk_buff*,int ,int ) ;
 int cpu_to_be16 (int ) ;
 struct sk_buff* dev_alloc_skb (int) ;
 int dev_queue_xmit (struct sk_buff*) ;
 int ether_addr_copy (int ,int *) ;
 int memset (struct learning_pkt*,int ,int) ;
 int skb_put_data (struct sk_buff*,struct learning_pkt*,int) ;
 int skb_reset_mac_header (struct sk_buff*) ;
 int slave_dbg (int ,int ,char*,int *,int ) ;

__attribute__((used)) static void alb_send_lp_vid(struct slave *slave, u8 mac_addr[],
       __be16 vlan_proto, u16 vid)
{
 struct learning_pkt pkt;
 struct sk_buff *skb;
 int size = sizeof(struct learning_pkt);

 memset(&pkt, 0, size);
 ether_addr_copy(pkt.mac_dst, mac_addr);
 ether_addr_copy(pkt.mac_src, mac_addr);
 pkt.type = cpu_to_be16(ETH_P_LOOPBACK);

 skb = dev_alloc_skb(size);
 if (!skb)
  return;

 skb_put_data(skb, &pkt, size);

 skb_reset_mac_header(skb);
 skb->network_header = skb->mac_header + ETH_HLEN;
 skb->protocol = pkt.type;
 skb->priority = TC_PRIO_CONTROL;
 skb->dev = slave->dev;

 slave_dbg(slave->bond->dev, slave->dev,
    "Send learning packet: mac %pM vlan %d\n", mac_addr, vid);

 if (vid)
  __vlan_hwaccel_put_tag(skb, vlan_proto, vid);

 dev_queue_xmit(skb);
}
